Try to fix the word wrapping again: comment no-wrap property for all dishes titles and wrapping them again manually.

--- a/assets/css/components.scss
+++ b/assets/css/components.scss
@@ -113,7 +113,7 @@
 }
 
 .dish-card__title {
-    white-space: nowrap;
+    // white-space: nowrap;
 }
 
 .dish-card__dotted-line {
